--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,27 +5,81 @@ body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
+    text-align: center;
+    margin: 0 auto;
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #eee;
-    border-radius: 6px;
-    padding: 60px;
-    h1 {
-        font-size: 60px;
-        line-height: 1;
-        letter-spacing: -1px;
-    }
+.top-header {
+    height: 80px;
+    width: 100%;
+    background-color: #eeeeee;
+    margin-bottom: 30px;
+    font-size: 50px;
+    line-height: 80px;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.main-body  {
+    width: 1400px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.collection {
+    vertical-align: top;
+    display: inline-block;
+    width: 30%;
+    height: auto;
+    min-height: 300px;
+    background-color: #eeeeee;
+    padding: 6px;
+}
+
+.B {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.button {
+    padding: 0;
+    width: 115px;
+    height: 40px;
+    font-size: 15px;
+    line-height: 40px;
+    border-radius: 4px;
+    text-align: center;
+    color: #000000;
+    border: 1px solid #999999;
+    background-color: #cccccc;
+}
+
+.A-left, .B-left, .C-left {
+    float: left;
+}
+
+.A-right, .B-right, .C-right {
+    float: right;
+}
+
+.button:hover {
+    box-shadow: 0px 0px 2px #333333;
+}
+
+.button-container {
+    height: 42px;
+    margin-bottom: 7px;
+}
+
+.image-box {
+    margin: 0 auto;
+    text-align: center;
+    height: auto;
+    width: 100%
+}
+
+.footer {
+    text-align: center;
+    margin: 0 auto;
+    height: 40px;
+    width: 100%;
+    margin-top: 25px;
 }
