--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,139 +2,145 @@
 // endbower
 
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+    background: #000000;
+    font-family: Helvetica, sans-serif, 'Questrial', Arial;
+    color: #333333;
     text-align: center;
     margin: 0 auto;
+    *vertical-align: top;
 }
-
 .top-header {
-    height: 69px;
+    height: 74px;
+    width: 98.3%;
+    padding-left: 12px;
+    font-size: 55px;
+    line-height: 74px;
+    text-align: left;
+    color: #ffffff;
+    background-image: linear-gradient(to bottom, #000000 0%, #343434 100%);
+    border-bottom: 1px solid #000000;
+    border-right: 1px solid #444444;
+    box-shadow: 0px 0px 5px #000000;
+}
+.top-header img {
+    float: left;
+    margin-top: 6px;
+    margin-right: 15px;
+}
+.scrumster {
+    float: left;
+    padding-top: 1px;
+    color: #eeeeee;
+    text-shadow: 0px 0px 4px #000000;
+    font-family: "Questrial";
+    letter-spacing: 7px;
+}
+.logo {
+    float: left;
+}
+.main-body {
+    text-align: center;
     width: 100%;
-    background-color: #eeeeee;
-    margin-bottom: 15px;
-    font-size: 50px;
-    line-height: 69px;
 }
-
-.main-body  {
-    text-align: center;
-    margin: 0 auto;
-    padding: 0;
+.steps-box {
+    width: 100%;
+    text-shadow: 0px 0px 1px #000000;
+    
 }
-
+.step {
+    float: left;
+    color: #999999;
+    font-size: 1.3em;
+    border-bottom: 1px solid #444444;
+    padding-top: 6px;
+    padding-bottom: 4px;
+    width: 33%;
+    border-top: 1px solid #666666;
+    border-right: 1px solid #666666;
+    box-shadow-top: 0px 0px 5px #000000;
+    background-image: linear-gradient(to bottom right, #1D1F20 0%, #444444 100%);
+}
+.last {
+    width: 99.2%;
+}
 .container {
-    vertical-align: top;
-    display: inline-block;
-    margin: 5px auto;
-    padding: 0;
-    text-align: center;
-    background-color: blue;
+    background-image: linear-gradient(to bottom right, #1D1F20 0%, #444444 100%);
     height: 282px;
     overflow: scroll;
-    padding-top: 10px;
+    padding-top: 5px;
+    border-top: 1px solid #666666;
+    border-right: 1px solid #666666;
+    box-shadow: 0px 0px 4px #343434;
+    float: left;
 }
-
-.first {
-    width: 41%;
+.first, .second, .third {
+    width: 33%;
 }
-
-.second, .third {
-    width: 28%;
-    margin-left: 9px;
-}
-
 .fourth {
-    margin-top: 10px;
-    width: 99%;
+    width: 99.2%;
 }
-
 .construction {
-    margin: 0 auto;
-    padding: 0;
     text-align: center;
-    background-color: red;
-    margin-bottom: 8px;
-    margin-left: 5px;
-    margin-right: 5px;
-    display: inline-block;
+    width: 97%;
+    margin-bottom: 20px;
+    color: #21AAF6;
+    letter-spacing: 0.5px;
+    margin-left: 8px;
+    margin-top: 6px;
+    margin-bottom: 20px;
 }
-
-.construction h4 {   
+.construction h4 {
     margin: 0 auto;
     padding: 0px;
+    text-align: left;
+    color: #51B622;
+    letter-spacing: 1.4px;
     margin-bottom: 2px;
 }
-
-.bundle1,  {
-    width: 22%
-}
-
-.bundle2, .bundle3,{
-    width: 44%;
-}
-
-.bundle4, {
-    width: 9%
-}
-
 .collection {
-    vertical-align: top;
-    display: inline;
+    width: 100%;
 }
-
+.complete {
+    width: 100%;
+}
 .caption {
     font-size: 14px;
+    margin: 0 auto;
     height: auto;
     text-align: left;
-    margin-left: 4px;
     margin-bottom: 6px;
+    width: 100%;
+    vertical-align: top;
 }
-
 .button {
     padding: 0;
-    width: 45%;
-    height: 35px;
+    width: 80px;
+    height: 30px;
     font-size: 14px;
-    line-height: 35px;
+    line-height: 30px;
     border-radius: 0px;
     text-align: center;
     color: #000000;
     border: 1px solid #999999;
+    border-radius: 5px;
     background-color: #cccccc;
 }
-
-.A-left, .B-left, .C-left, .D-left {
+.A-left, .B-left, .C-left, .D-left, .A-right, .B-right, .C-right, .D-right{
     float: left;
-    margin-left: 3px;
-}
-
-.A-right, .B-right, .C-right, .D-right {
-    float: right;
     margin-right: 3px;
 }
 
 .button:hover {
     box-shadow: 0px 0px 2px #333333;
 }
-
 .button-box {
     height: 42px;
     margin-bottom: 0px;
 }
-
-.image-box {
-    margin: 0 auto;
-    text-align: center;
-    height: auto;
-    width: 100%
-}
-
-.footer {
-    text-align: center;
-    margin: 0 auto;
-    height: 0px;
-    width: 100%;
-    margin-top: 25px;
-}
+// .footer {
+    //     text-align: center;
+    //     margin: 0 auto;
+    //     height: 0px;
+    //     width: 100%;
+    //     margin-top: 25px;
+// }
