--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,6 +38,7 @@ body {
 .logo {
     float: left;
 }
+
 .main-body {
     text-align: center;
     width: 100%;
@@ -64,6 +65,7 @@ body {
     width: 99.2%;
     box-shadow: 0px 0px 5px #000000;
     border-bottom: 1px solid #000000;
+    font-size: 1.4em;
 }
 .container {
     background-image: linear-gradient(to bottom right, #1D1F20 0%, #444444 100%);
@@ -85,7 +87,7 @@ body {
     text-align: center;
     width: 97%;
     margin-bottom: 20px;
-    color: #21AAF6;
+    color: #76daff;
     letter-spacing: 0.5px;
     margin-left: 8px;
     margin-top: 6px;
@@ -123,9 +125,9 @@ body {
     border-radius: 0px;
     text-align: center;
     color: #000000;
-    border: 1px solid #999999;
+    border: 1px solid #222222;
     border-radius: 5px;
-    background-color: #cccccc;
+    background-image: linear-gradient(to bottom, #EEEEEE 0%, #999999 100%);
     float: left;
     margin-right: 3px;
 }
@@ -134,13 +136,31 @@ body {
 }
 
 .button:hover {
-    box-shadow: 0px 0px 2px #333333;
+    box-shadow: 0px 0px 6px #666666;
 }
 .button-box {
     height: 42px;
-    margin-bottom: 0px;
+    padding-bottom: 2px;
     border-bottom: 1px solid #393939;
 }
+
+.login {
+    float: right;
+    margin-top: 12px;
+    font-size: 18px;
+    margin-right: 15px;
+    height: 50px;
+    width: 100px;
+    line-height: 50px;
+    color: #f5f5f5;
+    border: 1px solid #000000;
+    background-image: linear-gradient(to bottom, #444444 0%, #333333 100%);
+}
+
+.login:hover {
+    box-shadow: 0px 0px 6px #222222;
+}
+
 // .footer {
     //     text-align: center;
     //     margin: 0 auto;
@@ -148,3 +168,33 @@ body {
     //     width: 100%;
     //     margin-top: 25px;
 // }
+
+
+
+
+@media screen and (max-width: 1170px) {
+    .button-box {
+        padding-bottom: 20px;
+    }
+} /* media query dude 1170px */
+
+@media screen and (max-width: 923px) {
+    .button-box {
+        padding-bottom: 63px;
+    }
+} /* media query dude 923px */
+
+
+@media screen and (max-width: 560px) {
+    .button-box {
+        padding-bottom: 103px;
+    }
+} /* media query dude 560px */
+
+
+
+
+
+
+
+
