--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,7 +17,7 @@ body {
     line-height: 74px;
     text-align: left;
     color: #ffffff;
-    background-image: linear-gradient(to bottom, #000000 0%, #343434 100%);
+    background-image: linear-gradient(to bottom, #000000 0%, #292929 100%);
     border-bottom: 1px solid #000000;
     border-right: 1px solid #444444;
     box-shadow: 0px 0px 5px #000000;
@@ -29,11 +29,12 @@ body {
 }
 .scrumster {
     float: left;
-    padding-top: 1px;
+    padding-top: 40px;
     color: #eeeeee;
     text-shadow: 0px 0px 4px #000000;
     font-family: "Questrial";
     letter-spacing: 7px;
+    line-height: 1px;
 }
 .logo {
     float: left;
@@ -85,11 +86,11 @@ body {
 }
 .construction {
     text-align: center;
-    width: 97%;
+    width: 95%;
     margin-bottom: 20px;
     color: #76daff;
     letter-spacing: 0.5px;
-    margin-left: 8px;
+    margin-left: 15px;
     margin-top: 6px;
     margin-bottom: 20px;
 }
@@ -170,8 +171,6 @@ body {
 // }
 
 
-
-
 @media screen and (max-width: 1170px) {
     .button-box {
         padding-bottom: 20px;
@@ -184,11 +183,24 @@ body {
     }
 } /* media query dude 923px */
 
+@media screen and (max-width: 778px) {
+    .step {
+        height: 50px;
+    }
+} /* media query dude 778px */
 
 @media screen and (max-width: 560px) {
     .button-box {
         padding-bottom: 103px;
     }
+    .top-header {
+        height: 128px;
+    }
+    .login {
+        float: left;
+        margin-top: 28px;
+    }
+
 } /* media query dude 560px */
 
 
