--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,7 +39,6 @@ body {
 .logo {
     float: left;
 }
-
 .main-body {
     text-align: center;
     width: 100%;
@@ -47,7 +46,6 @@ body {
 .steps-box {
     width: 100%;
     text-shadow: 0px 0px 1px #000000;
-    
 }
 .step {
     float: left;
@@ -99,7 +97,7 @@ body {
     padding: 0px;
     text-align: left;
     color: #51B622;
-    letter-spacing: 1.4px;
+    letter-spacing: 1px;
     margin-bottom: 2px;
 }
 .collection {
@@ -135,7 +133,6 @@ body {
 .button img {
     margin-top: 2px;
 }
-
 .button:hover {
     box-shadow: 0px 0px 6px #666666;
 }
@@ -144,7 +141,6 @@ body {
     padding-bottom: 2px;
     border-bottom: 1px solid #393939;
 }
-
 .login {
     float: right;
     margin-top: 12px;
@@ -157,7 +153,6 @@ body {
     border: 1px solid #000000;
     background-image: linear-gradient(to bottom, #444444 0%, #333333 100%);
 }
-
 .login:hover {
     box-shadow: 0px 0px 6px #222222;
 }
@@ -168,30 +163,26 @@ body {
     //     height: 0px;
     //     width: 100%;
     //     margin-top: 25px;
+    //
 // }
 
-
-@media screen and (max-width: 1170px) {
+@media screen and (max-width:956px) {
     .button-box {
-        padding-bottom: 20px;
+        padding-bottom: 21px;
     }
-} /* media query dude 1170px */
+}
 
-@media screen and (max-width: 923px) {
-    .button-box {
-        padding-bottom: 63px;
-    }
-} /* media query dude 923px */
-
-@media screen and (max-width: 778px) {
+/* media query dude 923px */
+@media screen and (max-width:778px) {
     .step {
         height: 50px;
     }
-} /* media query dude 778px */
+}
 
-@media screen and (max-width: 560px) {
+/* media query dude 778px */
+@media screen and (max-width:560px) {
     .button-box {
-        padding-bottom: 103px;
+        padding-bottom: 80px;
     }
     .top-header {
         height: 128px;
@@ -200,13 +191,6 @@ body {
         float: left;
         margin-top: 28px;
     }
+}
 
-} /* media query dude 560px */
-
-
-
-
-
-
-
-
+/* media query dude 560px */
