--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,7 +7,6 @@ body {
     color: #333333;
     text-align: center;
     margin: 0 auto;
-    *vertical-align: top;
 }
 .top-header {
     height: 74px;
@@ -81,6 +80,7 @@ body {
 }
 .fourth {
     width: 99.2%;
+    height: 257px;
 }
 .construction {
     text-align: center;
@@ -91,12 +91,14 @@ body {
     margin-left: 15px;
     margin-top: 6px;
     margin-bottom: 20px;
+    line-height: 18px;
 }
 .construction h4 {
     margin: 0 auto;
     padding: 0px;
     text-align: left;
     color: #51B622;
+
     letter-spacing: 1px;
     margin-bottom: 2px;
 }
@@ -156,15 +158,6 @@ body {
 .login:hover {
     box-shadow: 0px 0px 6px #222222;
 }
-
-// .footer {
-    //     text-align: center;
-    //     margin: 0 auto;
-    //     height: 0px;
-    //     width: 100%;
-    //     margin-top: 25px;
-    //
-// }
 
 @media screen and (max-width:956px) {
     .button-box {
